# Vextor

./: .gitignore  Baxter.py  README.md  Strategy.py  data.h5  environment.yml  pyproject.toml
examples/: A Mean Reversion Strategy with 2.11 Sharpe.ipynb
src/: Baxter.py
src/Indicator/: Indicator.py
src/baxter/: Backtester.py  LoopTester.py  Strategy.py
src/baxter/Backtester/: Backtester.py
src/core/: Backtester.py  LoopTester.py
src/vextor/: Backtester.py  __init__.py
src/vextor/backtest/: __init__.py  backtest.py  schemas.py
src/vextor/strategy/: schemas.py  strategy.py
tests/: Backtester.py  conftest.py  data.h5  test_Backtester.py  test_LoopTester.py  test_Strategy.py
tools/: Portfolio.py
