[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Nicolai Banke", email = "nicolaibanke@hotmail.com" }]
name = "baxter"
version = "0.0.1"
dependencies = ["pandas>=2.3.3", "seaborn>=0.11.2", "matplotlib>=3.10.7"]
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
